samples/_failures_safe/1761417930_1c4a7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f648854.c: In function ‘main’:
./samples/SAFE/__tmp_4f648854.c:154:9: error: expected declaration or statement at end of input
  154 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_4f648854.c:154:9: error: expected declaration or statement at end of input
